--- a/Views/PlanoConta/Index.cshtml
+++ b/Views/PlanoConta/Index.cshtml
@@ -35,8 +35,8 @@
         console.log("Adicionar: ");
         window.location.href = "./Cadastro"
     }
-    function Editar(id) {
-        console.log("Editar: ", id);
+    function Atualizar(id) {
+        console.log("Atualizar: ", id);
         window.location.href = "./Cadastro/" + id;
     }
     function Excluir(id) {
